# libecc

./: CMakeLists.txt  README.md  common.mk  meson.build  meson.options
.github/workflows/: libecc_compilation_tests.yml  libecc_crossarch_tests.yml  libecc_examples.yml  libecc_meson_build.yml  libecc_python_tests.yml  libecc_runtime_tests.yml
include/libecc/: libarith.h  meson.build
include/libecc/curves/: aff_pt.h  curves_list.h  ec_params.h  prj_pt.h
include/libecc/ecdh/: ecdh.h
include/libecc/fp/: fp.h
include/libecc/hash/: bash224.h  bash256.h  bash384.h  bash512.h  hash_algs.h  hmac.h  sha224.h  sha256.h  sha3-224.h  sha3-256.h  sha3-384.h  sha512-224.h  sha512-256.h  sha512.h  sha512_core.h  shake256.h  streebog256.h  streebog512.h
include/libecc/nn/: nn.h  nn_add.h  nn_add_public.h  nn_logical.h
include/libecc/sig/: ec_key.h
include/libecc/utils/: print_curves.h  print_fp.h
scripts/: expand_libecc.py
src/curves/: hw_accelerator_glue.c  hw_accelerator_glue.h  meson.build  prj_pt.c
src/ecdh/: meson.build  x25519_448.c
src/examples/basic/: fp_square_residue.c
src/examples/sig/rsa/: rsa.c
src/external_deps/: rand.c
src/fp/: fp.c  fp_add.c  fp_mul.c  fp_sqrt.c  meson.build
src/hash/: meson.build
src/nn/: meson.build  nn.c  nn_add.c  nn_div.c  nn_logical.c  nn_mod_pow.c  nn_modinv.c  nn_mul.c  nn_mul_redc1.c  nn_rand.c
src/sig/: bign.c  bign_common.c  bip0340.c  dbign.c  decdsa.c  ecdsa.c  ecdsa_common.c  ecfsdsa.c  ecgdsa.c  eckcdsa.c  ecrdsa.c  ecsdsa_common.c  eddsa.c  meson.build  sm2.c
src/tests/: ec_self_tests.c  ec_self_tests_core.c  ec_self_tests_core.h  ec_utils.c  meson.build
src/utils/: utils_rand.c
src/wycheproof_tests/: libecc_wycheproof.c
